# navicon-demo

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 520cdfc5c274_tracks.py  9271e81ca97a_artist.py  95b3789dd131_album.py
app/: api_requests.py  base_db.py  get_ssh_path.py  main.py  model_base.py  models_relationship.py  settings.py  utils.py
tests/: conftest.py  simple_test.py  test_path_ssh.py
tests/api/: conftest.py  test_api_requests.py
tests/inner/: conftest.py  inner_test.py
tests/migrations/: conftest.py  test_data_migrations.py  test_migrations_up_to_date.py  test_stairway.py
tests/migrations/data_migrations/: migration_c1c21b1515c7.py
